tests/ui/feature-gates/feature-gate-move_expr.rs
fn main() {
    let _ = || move(2);
    //~^ ERROR `move(expr)` syntax is experimental
}
